c2rust-transpile/tests/snapshots/snapshots__transpile@conditions.c.2024.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/conditions.2024.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
#[unsafe(no_mangle)]
pub unsafe extern "C" fn simple_if_else(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    if x != 0 {
        x += 1 as ::core::ffi::c_int;
    } else {
        x += 2 as ::core::ffi::c_int;
    }
    return x;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn if_no_else(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    if x > 0 as ::core::ffi::c_int {
        x += 1 as ::core::ffi::c_int;
    }
    return x;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn multiple_ifs(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    if x != 0 {
        x += 1 as ::core::ffi::c_int;
    }
    if x != 0 {
        x += 2 as ::core::ffi::c_int;
    }
    return x;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn nested_if_else(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    if x > 0 as ::core::ffi::c_int {
        if x < 10 as ::core::ffi::c_int {
            x += 1 as ::core::ffi::c_int;
        } else {
            x += 2 as ::core::ffi::c_int;
        }
    } else {
        x -= 1 as ::core::ffi::c_int;
    }
    return x;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn nested_if_no_else(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    if x > 0 as ::core::ffi::c_int {
        if x < 10 as ::core::ffi::c_int {
            x += 1 as ::core::ffi::c_int;
        }
        x += 2 as ::core::ffi::c_int;
    } else {
        x -= 1 as ::core::ffi::c_int;
    }
    return x;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn early_returns(mut a: ::core::ffi::c_int) -> ::core::ffi::c_int {
    if a == 2 as ::core::ffi::c_int {
        return 2 as ::core::ffi::c_int;
    }
    if a == 3 as ::core::ffi::c_int {
        a += 1 as ::core::ffi::c_int;
    }
    if a == 4 as ::core::ffi::c_int {
        return 1 as ::core::ffi::c_int;
    }
    return 0 as ::core::ffi::c_int;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn nested_early_returns(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    if x != 0 {
        if x != 0 {
            x += 1 as ::core::ffi::c_int;
            return x;
        }
        x += 2 as ::core::ffi::c_int;
    } else {
        if x != 0 {
            x += 3 as ::core::ffi::c_int;
            return x;
        }
        x += 4 as ::core::ffi::c_int;
    }
    return x;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn conditional_operator(
    sz: ::core::ffi::c_uint,
    buf: *mut ::core::ffi::c_int,
) {
    let mut x: ::core::ffi::c_int = 0 as ::core::ffi::c_int;
    let mut y: ::core::ffi::c_int = 1 as ::core::ffi::c_int;
    *if false { &raw mut y } else { &raw mut x } = 10 as ::core::ffi::c_int;
    *buf.offset(2isize) = if true {
        2 as ::core::ffi::c_int
    } else {
        3 as ::core::ffi::c_int
    };
    *buf.offset(3isize) = if false {
        2 as ::core::ffi::c_int
    } else {
        3 as ::core::ffi::c_int
    };
}
unsafe extern "C" fn id(mut i: ::core::ffi::c_int) -> ::core::ffi::c_int {
    return i;
}
unsafe extern "C" fn add(
    mut p: *mut ::core::ffi::c_int,
    mut i: ::core::ffi::c_int,
    mut r: ::core::ffi::c_int,
) -> ::core::ffi::c_int {
    *p += i;
    return r;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn binary_conditional_operator(
    sz: ::core::ffi::c_uint,
    buf: *mut ::core::ffi::c_int,
) {
    let c2rust_fresh0 = id(0 as ::core::ffi::c_int);
    *buf.offset(0isize) = if c2rust_fresh0 != 0 {
        c2rust_fresh0
    } else {
        id(1 as ::core::ffi::c_int)
    };
    let c2rust_fresh1 = id(2 as ::core::ffi::c_int);
    *buf.offset(1isize) = if c2rust_fresh1 != 0 {
        c2rust_fresh1
    } else {
        id(3 as ::core::ffi::c_int)
    };
    if add(
        buf.offset(2 as ::core::ffi::c_int as isize),
        2 as ::core::ffi::c_int,
        0 as ::core::ffi::c_int,
    ) == 0
    {
        add(
            buf.offset(3 as ::core::ffi::c_int as isize),
            3 as ::core::ffi::c_int,
            0 as ::core::ffi::c_int,
        );
    }
    if add(
        buf.offset(4 as ::core::ffi::c_int as isize),
        4 as ::core::ffi::c_int,
        1 as ::core::ffi::c_int,
    ) == 0
    {
        add(
            buf.offset(5 as ::core::ffi::c_int as isize),
            5 as ::core::ffi::c_int,
            0 as ::core::ffi::c_int,
        );
    }
}
