c2rust-transpile/tests/snapshots/snapshots__transpile@empty_init.c.2021.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/empty_init.2021.rs
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#[derive(Copy, Clone)]
#[repr(C)]
pub struct Scope {
    pub next: *mut Scope,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct Foo_s {
    pub x: ::core::ffi::c_int,
}
pub type Foo_t = Foo_s;
#[no_mangle]
pub static mut scope: *mut Scope = &Scope {
    next: ::core::ptr::null::<Scope>() as *mut Scope,
} as *const Scope as *mut Scope;
#[no_mangle]
pub unsafe extern "C" fn foo() {
    let mut f: Foo_t = Foo_t { x: 0 };
}
