c2rust-transpile/tests/snapshots/snapshots__transpile@empty_init.c.2024.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/empty_init.2024.rs
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
#[derive(Copy, Clone)]
#[repr(C)]
pub struct Scope {
    pub next: *mut Scope,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct Foo_s {
    pub x: ::core::ffi::c_int,
}
pub type Foo_t = Foo_s;
static mut c2rust_fresh0: Scope = Scope {
    next: ::core::ptr::null::<Scope>() as *mut Scope,
};
#[unsafe(no_mangle)]
pub static mut scope: *mut Scope = &raw const c2rust_fresh0 as *mut Scope;
#[unsafe(no_mangle)]
pub unsafe extern "C" fn foo() {
    let mut f: Foo_t = Foo_t { x: 0 };
}
