c2rust-transpile/tests/snapshots/snapshots__transpile@empty_init.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/empty_init.rs
input_file: c2rust-transpile/tests/snapshots/empty_init.c
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_imports,
    unused_mut
)]
#[derive(Copy, Clone)]
#[repr(C)]
pub struct Scope {
    pub next: *mut Scope,
}
#[no_mangle]
pub static mut scope: *mut Scope = &Scope {
    next: ::core::ptr::null::<Scope>() as *mut Scope,
} as *const Scope as *mut Scope;
